--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ version = "0.1.0"
 device = []
 
 [dependencies]
-cortex-m = "0.7.2"
-cortex-m-rt = { version = "0.6.14", features = ["device"] }
-cortex-m-semihosting = "0.3.7"
+cortex-m = "*"
+cortex-m-rt = { version = "*", features = ["device"] }
+cortex-m-semihosting = "*"
 msp432p401r-pac = { version = "*", features = ["rt"] }
-panic-halt = "0.2.0"
-panic-semihosting = "0.5.6"
+panic-halt = "*"
+panic-semihosting = "*"
 
 [[bin]]
 name = "app"
