Allow for semihosting commands to be passed back

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,9 @@
 			"device": "msp432p401r",
 			"executable": "${workspaceRoot}/target/thumbv7em-none-eabihf/debug/app", 
 			"interface": "jtag",
+			"postLaunchCommands": [
+				"monitor arm semihosting enable",
+			],
 			"runToMain": true,
 			"servertype": "openocd",
 			"svdFile": "./MSP432P401R.svd",
